modified:   10-APIS/cmd/server/main.go 	modified:   10-APIS/cmd/server/test.db 	modified:   10-APIS/docs/docs.go 	modified:   10-APIS/docs/swagger.json 	modified:   10-APIS/docs/swagger.yaml 	modified:   10-APIS/internal/infra/webservers/handlers/product_handlers.go 	modified:   10-APIS/test/product.http 	modified:   Curso-GO.code-workspace 	11-Multithreading/
