# 10-APIS/internal/infra/webservers/handlers/product_handlers.go
@@ -22,6 +22,17 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	}
 }
 
+// Create Product godoc
+// @Summary 	Create a Product
+// @Description Create products
+// @Tags 		products
+// @Accept 		json
+// @Produce 	json
+// @Param 		request body 			dto.CreateProductInput 	true 	"product request"
+// @Success 	201
+// @Failure 	500 	{object}  		Error
+// @Router 		/products 	[post]
+// @Security 	ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product)
@@ -48,6 +59,18 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// Get Product godoc
+// @Summary 	Get a product
+// @Description Get a product
+// @Tags 		products
+// @Accept 		json
+// @Produce 	json
+// @Param 		id 				path		string true 	"product ID"	Format(uuid)
+// @Success 	200				{object}	entity.Product
+// @Failure 	404
+// @Failure 	500 			{object}  	Error
+// @Router 		/products/{id} 	[get]
+// @Security 	ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
@@ -68,6 +91,20 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(product)
 }
 
+// List Products godoc
+// @Summary 	List Products
+// @Description Get all products
+// @Tags 		products
+// @Accept 		json
+// @Produce 	json
+// @Param 		page 		query		string false 	"page number"
+// @Param 		limit 		query		string false 	"limit"
+// @Param 		sort 		query		string false 	"sort"
+// @Success 	200			{array}		entity.Product
+// @Failure 	404 		{object}  	Error
+// @Failure 	500 		{object}  	Error
+// @Router 		/products 	[get]
+// @Security 	ApiKeyAuth
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
@@ -98,6 +135,19 @@ func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(products)
 }
 
+// UpdateProduct godoc
+// @Summary 	Update a Product
+// @Description Update products
+// @Tags 		products
+// @Accept 		json
+// @Produce 	json
+// @Param 		id 		path		string 				 	true 	"product ID" Format(uuid)
+// @Param 		request body 		dto.CreateProductInput 	true 	"product request"
+// @Success 	200
+// @Failure 	404
+// @Failure 	500 				{object}				Error
+// @Router 		/products/{id} 		[put]
+// @Security 	ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
@@ -138,6 +188,18 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// DeleteProduct godoc
+// @Summary 	Delete a Product
+// @Description Delete products
+// @Tags 		products
+// @Accept 		json
+// @Produce 	json
+// @Param 		id 		path		string 				 	true 	"product ID" Format(uuid)
+// @Success 	200
+// @Failure 	404
+// @Failure 	500 				{object}				Error
+// @Router 		/products/{id} 		[delete]
+// @Security 	ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 
